--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <br/>
-<div class="jumbotron welcome-image">
+<div class="jumbotron welcome-image text-center">
   <h1>Marcipedia</h1>
   <p>Marcipedia allows users to create public and private Markdown-based wikis<p>
   <p>
@@ -10,11 +10,11 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h2>Premium Version</h2>
+    <h2><span class="glyphicon glyphicon-usd circle" aria-hidden="true"></span> Premium Version</h2>
     <p>A To-Do lists to remind you to do this week only!  For the little things.</p>
   </div>
   <div class="col-md-6">
-    <h2>Sign up for free!</h2>
+    <h2><span class="glyphicon glyphicon-tower circle" aria-hidden="true"></span> Sign up for free!</h2>
     <p>People have been raving about how organized they have been since using Blocitoff</p>
   </div>
 </div>
