--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,12 @@
  @import "bootstrap";
 
+ .user-info {
+   margin-top: 9px;
+ }
+
+ .nav {
+   margin-top: 5px;
+ }
 
 body {
   background: url(image_path('pinkfocus.jpg')) no-repeat top center fixed;
