--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,10 +26,10 @@ body {
   line-height:100px;
   text-align:center;
   color: #ccc;
-  -webkit-transition: all 2s ease, -webkit-transform 2s;
-  -moz-transition: all 2s ease;
-  -o-transition: all 2s ease;
-  transition: all 2s ease;
+  -webkit-transition: all .5s ease, -webkit-transform .5s;
+  -moz-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
 }
 
 .circle:hover
