--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,11 +10,11 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h2><span class="glyphicon glyphicon-usd circle" aria-hidden="true"></span> Premium Version</h2>
-    <p>A To-Do lists to remind you to do this week only!  For the little things.</p>
+    <h2><span class="glyphicon glyphicon-usd circle" aria-hidden="true"></span> Premium Plan</h2>
+    <p>Create private wikis!</p>
   </div>
   <div class="col-md-6">
-    <h2><span class="glyphicon glyphicon-tower circle" aria-hidden="true"></span> Sign up for free!</h2>
-    <p>People have been raving about how organized they have been since using Blocitoff</p>
+    <h2><span class="glyphicon glyphicon-tower circle" aria-hidden="true"></span> Free Plan</h2>
+    <p>Create as many public wikis as you want!</p>
   </div>
 </div>
