--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -3,7 +3,7 @@
      <div class="media">
      <div class="media-body">
        <h4 class="media-heading">
-         <%= link_to wiki.title, wiki %>
+         <%= markdown link_to wiki.title, wiki %>
        </h4>
      </div>
    </div>
