--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -2,4 +2,4 @@
 
 <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
 
-<p><%= @wiki.body %></p>
+<p><%= markdown @wiki.body %></p>
