--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -7,6 +7,9 @@
      <div class="media-body">
        <h4 class="media-heading">
          <%= markdown link_to wiki.title, wiki %>
+          <small>
+            created <%= time_ago_in_words(wiki.created_at) %> ago by <%= wiki.user.name %><br/>
+         </small>
        </h4>
      </div>
    </div>
