--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,6 +12,7 @@
   <div class="col-md-6">
     <h2><span class="glyphicon glyphicon-usd circle" aria-hidden="true"></span> Premium Plan</h2>
     <p>Create private wikis!</p>
+    <%= link_to "Upgrade Today", "upgrade", class: 'btn btn-primary' %>
   </div>
   <div class="col-md-6">
     <h2><span class="glyphicon glyphicon-tower circle" aria-hidden="true"></span> Free Plan</h2>
