--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,7 +30,16 @@
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
+
 <% end %>
+
+<h3>Current Plan</h3>
+<p> Your current plan is Standard/ Premium </p>
+<div class="actions">
+
+  <%= button_to "Upgrade my account", charges_path, class: 'btn btn-success' %>
+
+</div>
 
 <h3>Cancel my account</h3>
 
