--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -34,12 +34,15 @@
 <% end %>
 
 <h3>Current Plan</h3>
-<p> Your current plan is Standard/ Premium </p>
+
+<p> Your current plan is <%= current_user.role %> </p>
+<% if current_user.role == 'standard' %>
 <div class="actions">
 
-  <%= button_to "Upgrade my account", charges_path, class: 'btn btn-success' %>
+  <%= link_to "Upgrade my account", new_charge_path, class: 'btn btn-success' %>
 
 </div>
+<% end %>
 
 <h3>Cancel my account</h3>
 
