--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,15 +2,20 @@
 <div class="jumbotron welcome-image text-center">
   <h1>Marcipedia</h1>
   <p>Marcipedia allows users to create public and private Markdown-based wikis<p>
+  <% unless current_user %>
   <p>
-      <%= link_to "Sign In", "#", class: 'btn btn-primary' %> or
-      <%= link_to "Sign Up", "#" , class: 'btn btn-primary' %> today!
+      <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+      <%= link_to "Sign Up", new_user_registration_path , class: 'btn btn-primary' %> today!
   </p>
+  <% end %>
 </div>
 
 <div class="row">
   <div class="col-md-6">
+    <%= link_to new_charge_path do %>
     <h2><span class="glyphicon glyphicon-usd circle" aria-hidden="true"></span> Premium Plan</h2>
+    <% end %>
+
     <p>Create private wikis!</p>
     <%= link_to "Upgrade Today", new_charge_path, class: 'btn btn-primary' %>
   </div>
