--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,13 @@
 
         <div class="pull-right user-info">
            <% if current_user %>
-             Hello <%= current_user.email %>!
+             Hello <%= link_to current_user.email, edit_user_registration_path %>!
              <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm' do %>
                <span class="glyphicon glyphicon-user"></span>
              <% end %>
 
              <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm' do %>
-               <span class="glyphicon glyphicon-log-out"></span>
+               Log Out
               <% end %>
            <% else %>
              <%= link_to "Sign In", new_user_session_path %> or
