Add change Premium to Standard plan

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@
     <p>Create private wikis! Upgrade Today!</p>
   </div>
   <div class="col-md-6 text-center">
-    <%= link_to charge_path(:id) do %>
+    <%= link_to upgrade_path do %>
     <h2> Free Plan </h2>
     <h2><span class="glyphicon glyphicon-tower circle" aria-hidden="true"></span></h2>
     <% end %>
