--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -37,11 +37,17 @@
 
 <p> Your current plan is <%= current_user.role %> </p>
 <% if current_user.role == 'standard' %>
-<div class="actions">
+    <div class="actions">
 
-  <%= link_to "Upgrade my account", new_charge_path, class: 'btn btn-success' %>
+      <%= link_to "Upgrade my account", new_charge_path, class: 'btn btn-success' %>
 
-</div>
+    </div>
+    <% else %>
+    <div class="actions">
+
+      <%= link_to "Change my account to standard plan", charge_path(:id), class: 'btn btn-success' %>
+
+    </div>
 <% end %>
 
 <h3>Cancel my account</h3>
