Buttons to change plan from premium to standard.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,7 +36,7 @@
 <h3>Current Plan</h3>
 
 <p> Your current plan is <%= current_user.role %> </p>
-<% if current_user.role == 'standard' %>
+<% if current_user.role=='standard' %>
     <div class="actions">
 
       <%= link_to "Upgrade my account", new_charge_path, class: 'btn btn-success' %>
@@ -45,7 +45,10 @@
     <% else %>
     <div class="actions">
 
-      <%= link_to "Change my account to standard plan", charge_path(:id), class: 'btn btn-success' %>
+      <%= link_to edit_user_registration_path, class: 'btn btn-success' do %>
+        Change my account to standard plan
+        <% current_user.update_attributes(role: 'standard') %>
+      <% end %>
 
     </div>
 <% end %>
