View only non private wikis if you are on standard plan

--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -3,6 +3,7 @@
   <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
  <% end %>
 <% @wikis.each do |wiki| %>
+ <% if policy(wiki).update? %>
      <div class="media">
      <div class="media-body">
        <h4 class="media-heading">
@@ -13,5 +14,6 @@
        </h4>
      </div>
    </div>
+<% end %>
 
 <% end %>
