--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -8,8 +8,7 @@
    <p>Marcipedia Premium Users can private Markdown-based wikis and choose colaborators<p>
    <p> At the moment you are a <%=current_user.role %> user <p>
 
-
-  <% if current_user.role=='standard' %>
+  <% if current_user.role?('standard') %>
    <h4> Upgrade using any credit card </h4>
    <%= form_tag charges_path do %>
      <script class='stripe-button' src="https://checkout.stripe.com/checkout.js" data-key="<%= @stripe_btn_data[:key] %>" data-amount=<%= @stripe_btn_data[:amount] %> data-description="<%= @stripe_btn_data[:description] %>" ></script>
