--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
         <div class="pull-right user-info">
            <% if current_user %>
-             Hello <%= link_to current_user.email, edit_user_registration_path %>!
+             Hello <%= link_to current_user.name, edit_user_registration_path %>!
              <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm' do %>
                <span class="glyphicon glyphicon-user"></span>
              <% end %>
