--- a/app/views/welcome/upgrade.html.erb
+++ b/app/views/welcome/upgrade.html.erb
@@ -5,7 +5,7 @@
  <div class="jumbotron welcome-image text-center">
    <% if current_user %>
     <h2> At the moment you are a <%=current_user.role %> user. <h2>
-      <% if current_user.role == 'premium' %>
+      <% if current_user.role?('premium') %>
          <h2>Change your plan today for free </h2>
          <p>Marcipedia Standard Users can make public Markdown-based wikis<p>
         <%= link_to edit_user_registration_path, class: 'btn btn-success' do %>
