--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -45,9 +45,8 @@
     <% else %>
     <div class="actions">
 
-      <%= link_to edit_user_registration_path, class: 'btn btn-success', data: { confirm: 'Are you sure you want to change your plan to Standard?' } do %>
+      <%= link_to charge_path(id: 1), class: 'btn btn-success', method: :delete, data: { confirm: 'Are you sure you want to change your plan to Standard?' } do %>
         Change my account to standard plan
-        <% current_user.update_attributes(role: 'standard') %>
       <% end %>
 
     </div>
