--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
         <li><%= link_to "Marcipedia", root_path %></li>
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Wikis", wikis_path %></li>
+        <li><%= link_to "Users", users_path %></li>
 
         <div class="pull-right user-info">
            <% if current_user %>
