Created Collaborators :has_many through

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,3 +37,9 @@ body {
     text-decoration:none;
     background:#c48fba;
     font-size: 1.3em;}
+
+
+.collaborator {
+      width: 50%;
+
+    }
