--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -13,3 +13,7 @@
       <%= render  partial: 'form', locals: {wiki: @wiki} %>
    </div>
  </div>
+
+ <% if @wiki.private %>
+  <%= render partial: 'wikis/collaborators' %>
+ <% end %>
