--- a/app/views/wikis/_collaborators.html.erb
+++ b/app/views/wikis/_collaborators.html.erb
@@ -1,15 +1,26 @@
-<%=@users.count %>
-<% @users.each do |user|  %>
 
-  <div class="media">
-    <div class="media-body">
-      <h4 class="media-heading">
-        <%=  user.name %>
-        <small>
-          select to be a collaborator.
-          <br/>
-        </small>
-      </h4>
-    </div>
+
+
+
+  <div>
+    <table class="table table-hover table-bordered collaborator" align="center">
+      <h1 class = "text-center">Collaborators</h1>
+      <h2 class = "text-center">Choose users who have permission to edit this private wiki.</h2>
+
+      <thead>
+        <tr>
+          <th >Users</th>
+          <th >Collaborator</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users.each do |user|  %>
+        <%= content_tag :tr, class: 'media', id: "colaborator" do %>
+
+        <td>  <%=  user.name %> </td>
+        <td>  select  </td>
+        <% end %>
+        <% end %>
+      </tbody>
+    </table>
   </div>
-  <% end %>
