--- a/app/views/wikis/_collaborators.html.erb
+++ b/app/views/wikis/_collaborators.html.erb
@@ -1,7 +1,7 @@
   <div>
     <table class="table table-hover table-bordered collaborator" align="center">
       <h1 class = "text-center">Collaborators</h1>
-      <h3 class = "text-center">Choose users who have permission to edit this private wiki.</h3>
+      <h3 class = "text-center">Choose users who have permission to edit this private wiki: <%= @wiki.title %></h3>
 
       <thead>
         <tr>
