--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -4,63 +4,45 @@
     <%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
   </div>
 
-
   <div class="form-group">
     <%= f.label :body %>
-
     <div id="epiceditor" class="form-group"> </div>
     <%= f.text_area :body, rows: 12, id: "epictextarea", class: 'form-control hide', placeholder: "Enter Wiki Here" %>
-
   </div>
 
-  <% if current_user.role?('admin') || current_user.role?('premium') %>
-  <div class="form-group">
-    <%= f.label :private, class: 'checkbox' do %>
-    <%= f.check_box :private %> Private wiki
-    <% end %>
-  </div>
-  <% end %>
-
-
-  <div class="form-group">
-    <%= f.submit "Save", class: 'btn btn-success' %>
-  </div>
-
-  <!-- List of Collaborators -->
-
-  <table class="table table-hover table-bordered collaborator" align="center">
-    <h1 class = "text-center">Collaborators</h1>
-    <h3 class = "text-center">Choose users who have permission to edit this private wiki: <%= @wiki.title %></h3>
-
-
-    <thead>
-      <tr>
-        <th >Users</th>
-        <th >Collaborator</th>
-      </tr>
-    </thead>
-    <tbody>
-      <%= hidden_field_tag :wiki_id, @wiki.id %>
-      <% @users.each do |user|  %>
-        <%= content_tag :tr, class: 'media', id: "collaborator" do %>
-          <td>  <%=  user.name %> </td>
-          <%= hidden_field_tag :user_id, user.id %>
-            <% if @wiki.users.include?(user) %>
-              <td>  Yes </td>
-            <% else %>
-              <td>
-                <div class="form-group">
-                  <%= f.label :user_id, class: "checkbox-#{user.id}" do %>
-                  <%= f.check_box :user_id %>
-                </div>
-              </td>
-            <% end %>
+      <% if current_user.role?('admin') || current_user.role?('premium') %>
+        <div class="form-group">
+          <%= f.label :private, class: 'checkbox' do %>
+          <%= f.check_box :private %> Private wiki
           <% end %>
-        <% end %>
-      <% end %>
-
-    </tbody>
-  </table>
+        </div>
 
 
+
+        <table class="table table-hover table-bordered collaborator" align="center">
+          <h1 class = "text-center">Collaborators</h1>
+          <h3 class = "text-center">Choose users who have permission to edit this private wiki: <%= @wiki.title %></h3>
+
+          <thead>
+            <tr>
+              <th >Users</th>
+              <th >Collaborator</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <% @users.each do |user|  %>
+                <tr>
+                  <td>  <%=  user.name %> </td>
+                  <td>
+                    <div class="form-group">
+                      <%= check_box_tag "wiki[user_ids][]", user.id, @wiki.users.include?(user) %>
+                    </div>
+                  </td>
+                </tr>
+            <% end %>
+          </tbody>
+        </table>
+         <% end %> <!-- if cuurent_user.role .... -->
+    <p> <%= f.submit 'Save', class: 'btn btn-info' %>
 <% end %>
