--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -56,4 +56,9 @@
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
+<h3>Collaborations</h3>
+
+<p> You have been given permission to collaborate on the following wiki's </p>
+
+
 <%= link_to "Back", :back %>
