Displays the list of Wikis that a user can collaborate on.  Displays on wiki#index and on registration#edit

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -60,5 +60,11 @@
 
 <p> You have been given permission to collaborate on the following wiki's </p>
 
-
+  <% @wikis.each do |wiki| %>
+    <% wiki.users.first %>
+    <% if wiki.users.include?(current_user) %>
+      <%= markdown link_to wiki.title, wiki %>
+    <% end %>
+  <% end %>
+</br>
 <%= link_to "Back", :back %>
