--- a/app/views/wikis/index.html.haml
+++ b/app/views/wikis/index.html.haml
@@ -13,7 +13,7 @@
               \- Private
             %br/
   .col-md-6
-    %h3 You have been given permission to collaborate with the following
+    %h3 You have been given permission to collaborate with the following wikis
     - @wikis.each do |wiki|
       %h4.media-heading
         - if wiki.users.include?(current_user)
